# dsp-hw3

./: .gitignore  CMakeLists.txt  Makefile  README.md  build.sh  report_S1.nsys-rep  report_S8.nsys-rep  run.sh
include/: experiments.h  loader.h
src/: args.hpp  benchmark.hpp  control.hpp  exp1.cu  experiment1.cu  experiment1.h  experiment1.hpp  experiment2.cu  experiment2.hpp  loader.cpp  main.cpp  main.cu  preprocess.hpp  profile_exp2.cu  profile_single.cu  test_vram.cu
